@@ -12,10 +12,10 @@ if(NOT EXISTS ${CMAKETOOLS_CURRENT_BUILT_FILE})
 	# Build project
 	if(CMAKETOOLS_TARGET_SYSTEM_WIN32)
 		# Build vcproj
-		external_vcproj_build("${CMAKETOOLS_CURRENT_BUILD_DIR}/build/libpng-1.2.44/projects/visualc71/libpng.vcproj" "LIB Release")
+		external_vcproj_build("${CMAKETOOLS_CURRENT_BUILD_DIR}/build/libpng-1.4.5/projects/visualc71/libpng.vcproj" "LIB Release")
 	elseif(CMAKETOOLS_TARGET_SYSTEM_LINUX)
 		# Use make
-		external_run_make2("${CMAKETOOLS_CURRENT_BUILD_DIR}/build/libpng-1.2.44")
+		external_run_make2("${CMAKETOOLS_CURRENT_BUILD_DIR}/build/libpng-1.4.5")
 	endif()
 endif()
 
