@@ -1,5 +1,5 @@
-libpng 1.2.44
-- License: "png", see "license.txt"
+libpng 1.4.5
+- License: "png", see "LICENSE"
 - PNG image loading library
 - Used by image loaders in PLGraphics
 - Download from: http://www.libpng.org/
