@@ -1,3 +1,9 @@
+>> 17.12.2010
+[CO]
+- Updated libpng from "1.2.44" to "1.4.5"
+
+
+
 /*********************************************************\
  *  The entries below are in german only
 \*********************************************************/
