@@ -25,7 +25,7 @@ The core of PLGraphics depends on the \textbf{PLGeneral}, \textbf{PLCore} and \t
 \begin{itemize}
 \item PNG image loading library
 \item \emph{png} license
-\item Version \emph{1.2.44} (25 June 2010)
+\item Version \emph{1.4.5} (December 9, 2010)
 \item Used by the image loader plugin class \emph{ImageLoaderPNG}
 \item Downloaded from \url{http://www.libpng.org/}
 \end{itemize}
